# musicxml-rs

./: Cargo.toml  README.md  chords1.xml  dynamics1.xml  empty.txt  lyrics2.xml  slurs1.dorico  slurs1.xml  tempi.xml  test.txt  test.xml  test1.musicxml
src/: error.rs  main.rs  musicxml.rs  prelude.rs
src/musicxml/: articulations.rs  attributes.rs  barline.rs  core.rs  credit.rs  defaults.rs  direction.rs  harmony.rs  identification.rs  lyric.rs  measure.rs  mididevice.rs  midiinstrument.rs  notations.rs  note.rs  part.rs  pitch.rs  scoreinstrument.rs  scorepart.rs  scorepartwise.rs  slurs1.dorico  work.rs
xml-files/: Form.xml  articulation.xml  barlines.xml  chords1.xml  doubledot.xml  flow.xml  lyrics1.musicxml  lyrics1.xml  lyrics3.xml  slurs1 - Full score - 01 Flow 1.xml  slurs1 - Full score - 02 Flow 2.xml  slurs1 - Full score - 03 Flow 3.xml  voices1.musicxml  voices1.xml  voices2.xml
xml-files/measure/: test-directions-dynamics.xml  test-dynamics copy.xml  test-lyrics-placement.musicxml  test-lyrics-placement.xml  test-lyrics-placement2.xml  test-lyrics1.musicxml  test-voices.xml
