[package]
name = "musicxml-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
roxmltree = "0.18.0"
strum = "0.24.1"
strum_macros = "0.24"
thiserror = "1.0.40"

[dev-dependencies]
# inline-xml = "0.2.3"
